--- a/public/header.css
+++ b/public/header.css
@@ -1,7 +1,11 @@
+header {
+  background: #333333;
+}
+
 header .container {
   justify-content: space-between;
   align-items: center;
-
+  padding: 25px 0;
 }
 
 .nav {
@@ -9,11 +13,15 @@ header .container {
 }
 
 .nav a {
-  color: #333333;
+  color: #fff;
 }
 
 .nav li {
   position: relative;
+}
+
+.nav li + li {
+  margin-left: 30px;
 }
 
 .nav li::after {
@@ -24,7 +32,7 @@ header .container {
   height: 2px;
   bottom: 0;
   left: 0;
-  background-color: #333333;
+  background-color: #fff;
   transform-origin: bottom right;
   transition: transform 0.25s ease-out;
 }
