--- a/public/style.css
+++ b/public/style.css
@@ -1,7 +1,8 @@
 @import "normalize.css";
 @import "header.css";
+@import "intro.css";
 
-h1, h2, a, p {
+h1, h2, a, p, a{
   font-family: Cardo;
 }
 
@@ -14,4 +15,19 @@ h1 {
   flex-wrap: wrap;
   max-width: 1080px;
   margin: 0 auto;
+}
+
+.btn a{
+  background: none;
+  border: 3px solid #fff;
+  padding: 3px 45px;
+  color: #fff;
+  font-family: Cardo;
+  font-size: 24px;
+  border-radius: 10px;
+  transition: 0.3s;
+}
+
+.btn a:hover {
+  box-shadow: 0px 0px 5px 4px  rgba(255, 255, 255, 0.2);
 }
