--- a/public/header.css
+++ b/public/header.css
@@ -1,7 +1,4 @@
-header {
-  background: rgb(33,33,33);
-  background: linear-gradient(130deg, rgba(33,33,33,1) 0%, rgba(32,32,32,1) 35%);
-}
+
 
 header .container {
   justify-content: space-between;
@@ -41,4 +38,21 @@ header .container {
 .nav li:hover::after {
   transform: scaleX(1);
   transform-origin: bottom left;
+}
+
+.header {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  background-color: rgb(33,33,33);
+  transition: background-color 0.6s ease, transform 0.6s ease;
+  z-index: 1000;
+}
+
+.scrollou {
+  transform: translateY(-100%);
+}
+
+.visible {
+  color: #fff;
 }
